    Thanks to Daniel Sheppard, Navid Vahdat, and Ron Hanson for help in adding capabilities to the RequestDispatcher implementation.
    Thanks to Ron Hanson for catching the obsolete behavior of HttpServletRequest.setAttribute.
    Thanks to Raphael Corre for improving logger of transmitted headers

Problems Fixed:
    Packaging
        1. The manifest.mf file now has line breaks between properties
    Content and Parsing
        2. get...WithID was incorrectly doing case insensitive matches.  It is now case-sensitive, since that is the way
           the ID attribute is defined.
        3. Forms prematurely closed because of improper nesting will now contain any controls defined before the next form.
        4. Quotes in refresh URL meta tags are now recognized and stripped.
        5. Headers defined per request were not being logged
    JavaScript
        6. Opening a non-HTML window via Javascript no longer raises a NotHTMLException.
        7. Bug #680695: Button.click() is now supported.
        8. Bug #680695: Form control ids are now usable to locate components.
        9. Scripts marked as something besides JavaScript are now ignored.
       10. Calling document.close() in the middle of an immediate script no longer replaces the current page.
    ServletUnit
       11. Calling HttpServletRequest.setAttribute in ServletUnit no longer throws an IllegalStateException if the value
           had previously been defined.
       12. Included and forwarded servlets now inherit parameters from their calling servlet.
       13. Included servlets now have access to their path information as attributes, as per the spec.
       14. Forwarded servlets now have access to their path information from the standard request methods, as required.
       15. All servlets within a web application now share the same instance of ServletContext, permitting attributes
           set by one servlet to be visible to other servlets.